// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expenses 1`] = `
<div>
  <h3>
    Viewing 
    3
     expense
    s
     totalling 
    1950395
  </h3>
</div>
`;

exports[`should render ExpensesSummary with no expenses 1`] = `
<div>
  <h3>
    Viewing 
    0
     expense
    s
     totalling 
    0
  </h3>
</div>
`;
